# fingertip_dual_sensor

./: CMakeLists.txt  README.md  package.xml
lib/SparkFun_LPS25HB_Arduino_Library/: SparkFun_LPS25HB_Arduino_Library.cpp
msg/: DualPressureStamped.msg  ProximityArray.msg  ProximityStamped.msg
pressure/lib/SparkFun_LPS25HB_Arduino_Library/: SparkFun_LPS25HB_Arduino_Library.h
proximity/src/: main.cpp
src/: main.cpp
